increased memory when running maven